<resources>
    <string name="app_name">Trather</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="login">Login</string>
    <string name="create_new_account">Create new account</string>
    <string name="successfully_logged_in">Successfully Logged in!</string>
    <string name="wrong_email_or_password">Wrong email or password!</string>
    <string name="please_enter_email">Please enter your email</string>
    <string name="please_enter_password">Please enter your password</string>
    <string name="signup_error">Sign up error</string>
    <string name="edit_your_profile">Edit Your Profile</string>
    <string name="email_already_exits">Email already exits</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="choose_date_of_birth">Choose your DOB</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="enter_your_id_card_number">Enter your ID card number</string>
    <string name="tell_about_your_self">Tell something about yourself</string>
    <string name="change">Change</string>
    <string name="wait">Please wait</string>
    <string name="take_picture">Take picture</string>
    <string name="choose_from_gallery">Choose from gallery</string>
    <string name="remove_picture">Remove picture</string>
    <string name="sign_up_completed">Sign up completed</string>
    <string name="please_enter_your_name">Please enter your name</string>
    <string name="please_enter_your_id_card_number">Please enter your ID card number</string>
    <string name="please_enter_your_phone_number">Please enter your phone number</string>
    <string name="you_must_tell_something_about_yourself">Your must tell something about yourself</string>
    <string name="enter_your_phone_number">Enter your phone number</string>
    <string name="profile">Profile</string>
    <string name="directions">Directions</string>
    <string name="map">Map</string>
    <string name="notifications">Notifications</string>
    <string name="nav_open">Open Navigation Drawer</string>
    <string name="nav_close">Close Navigation Drawer</string>
    <string name="help_and_settings">Help and Settings</string>
    <string name="settings">Settings</string>
    <string name="log_out">Log out</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone number</string>
    <string name="id_card_number">ID card number</string>
    <string name="joined_at">Joined at</string>
    <string name="description">Description</string>
    <string name="gender">Gender</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Cuong's String-->

    <string name="api_key">AIzaSyCVEffvfta5Xjbc1wK8krVlLFe6Bjt4hd4</string>
    <string name="map_toolbar_hint">Where do you want to go?</string>
</resources>
